[package]
name = "mini-redis-implementation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
async-std = { version = "1.10.0", features = ["attributes"] }
libp2p = { version = "0.44.0", features = ["tcp-tokio"] }

